# claude-speak

./: .gitignore  LICENSE  README.md  pyproject.toml
icon/: index.html
src/claude_speak/: __main__.py  cli.py  commands.py  config.py  hooks.py  install.py  pidfile.py  pipeline_player.py  player.py  tts.py
src/claude_voice/: __main__.py  audio.py  cli.py  commands.py  config.py  filters.py  hooks.py  hotkey.py  install.py  pidfile.py  pipeline_player.py  player.py  stt.py  transcript.py  tts.py
