[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-voice"
version = "0.1.0"
description = "Add push-to-talk and text-to-speech to Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Antony Jaen" }]
keywords = ["claude", "claude-code", "voice", "tts", "stt", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "click>=8.1",
    "faster-whisper>=1.0",
    "numpy>=1.26",
    "pynput>=1.7",
    "rich>=13.7",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
]

[project.scripts]
claude-voice = "claude_voice.cli:main"

[project.urls]
Homepage = "https://github.com/tonyj/claude-voice"
Issues = "https://github.com/tonyj/claude-voice/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_voice"]
