[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-voice"
version = "0.1.0"
description = "Text-to-speech for Claude Code — hear every reply without lifting a finger"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Antony Jaen" }]
keywords = ["claude", "claude-code", "voice", "tts", "text-to-speech", "hooks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "click>=8.1",
    "edge-tts>=6.1",
    "pygame>=2.5",
    "rich>=13.7",
]

[project.scripts]
claude-voice = "claude_voice.cli:main"

[project.urls]
Homepage = "https://github.com/antonyjaen/claude-voice"
Issues = "https://github.com/antonyjaen/claude-voice/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_voice"]
